@@ -6,6 +6,7 @@ import java.security.NoSuchAlgorithmException;
 
 import org.apache.oltu.oauth2.as.issuer.MD5Generator;
 import org.apache.oltu.oauth2.common.exception.OAuthSystemException;
+import org.junit.Ignore;
 import org.junit.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 
@@ -26,14 +27,17 @@ public class RandomCodeGeneratorTest extends SpringJerseyTest {
         //System.out.println(value);
     }
 
+    @Ignore
     public void testRandomGeneratorPerformance () throws OAuthSystemException,
             NoSuchAlgorithmException, KustvaktException {
         long min = Integer.MAX_VALUE, max = Integer.MIN_VALUE;
 
+        String code;
         while (true) {
             long start = System.currentTimeMillis();
             for (int i = 0; i < 10000; i++) {
-                random.createRandomCode();
+                code = random.createRandomCode();
+                code = random.filterRandomCode(code);
             }
             long end = System.currentTimeMillis();
             long duration = end - start;
@@ -46,6 +50,7 @@ public class RandomCodeGeneratorTest extends SpringJerseyTest {
         }
     }
 
+    @Ignore
     public void testMD5Generator () throws OAuthSystemException,
             NoSuchAlgorithmException, KustvaktException {
         MD5Generator m = new MD5Generator();
