@@ -62,7 +62,7 @@ oauth2.access.token.expiry = 3M
 oauth2.refresh.token.expiry = 90D
 oauth2.authorization.code.expiry = 10M
 # -- scopes separated by space
-oauth2.default.scopes = openid search match_info
+oauth2.default.scopes = search match_info
 oauth2.client.credentials.scopes = client_info
 
 ## OpenId
